--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
+    "react-spinners": "^0.14.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
